ribbit/tests/ui/arbitrary_nonzero.stderr
error: Unknown field: `nonzero`. Did you mean `non_zero`?
 --> tests/ui/arbitrary_nonzero.rs:6:21
  |
6 | #[ribbit(size = 15, nonzero)]
  |                     ^^^^^^^
